modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/script.js 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preprocessor Page</title>
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -35,14 +36,43 @@
             <article id="home-gallery">
                 <h2>Gallery</h2>
                 <div class="home-gallery-main">
-                    <div class="home-gallery-part">
-                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
-                    </div>
-                    <div class="home-gallery-part">
-                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
-                    </div>
-                    <div class="home-gallery-part">
-                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                        </div>
                     </div>
                 </div>
             </article>
