--- a/Preprocessor_Page/login.html
+++ b/Preprocessor_Page/login.html
@@ -18,7 +18,7 @@
                 </div>
                 <a class="reg-form-info" href="register.html">No account yet</a>
                 <div class="reg-form-button">
-                    <input class="reg-form-button-main" type="button">
+                    <input class="reg-form-button-main" type="button" value="Login">
                     <a class="reg-form-back-home" href="index.html">Return to home</a>
                 </div>
             </article>
