--- a/Preprocessor_Page/register.html
+++ b/Preprocessor_Page/register.html
@@ -21,7 +21,7 @@
                 </div>
                 <a class="reg-form-info" href="login.html">Already have an account</a>
                 <div class="reg-form-button">
-                    <input class="reg-form-button-main" type="button">
+                    <input class="reg-form-button-main" type="button" value="Register">
                     <a class="reg-form-back-home" href="index.html">Return to home</a>
                 </div>
             </article>
