modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/script.js 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -232,14 +232,17 @@
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
                             <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
+                            <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
                             <img src="./assets/image.png" alt="" width="100%">
+                            <input type="button" value="View more">
                         </div>
                     </div>
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
                             <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
+                            <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
                             <img src="./assets/image1.png" alt="" width="100%">
@@ -248,6 +251,7 @@
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
                             <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
+                            <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
                             <img src="./assets/image.png" alt="" width="100%">
@@ -256,6 +260,7 @@
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
                             <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
+                            <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
                             <img src="./assets/image1.png" alt="" width="100%">
