modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -166,6 +166,8 @@
             </nav>
         </header>
         <main>
+            <div class="img-decoration-top-left"></div>
+            <div class="img-decoration-bottom-right"></div>
             <section id="home-greetings">
                 <h1>Welcome to BeamNG Drift Zone!</h1>
             </section>
