new file:   Preprocessor_Page/assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png 	new file:   Preprocessor_Page/assets/dc3dc0fba5a1476c8e0cd10c83b66247-free.png 	modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/info.html 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -169,7 +169,7 @@
             <div class="img-decoration-top-left"></div>
             <div class="img-decoration-bottom-right"></div>
             <section id="home-greetings">
-                <h1>Welcome to BeamNG Drift Zone!</h1>
+                <h1>Welcome to BeamNG <br> HypeRacing Team!</h1>
             </section>
             <article id="home-gallery">
                 <h2>Gallery</h2>
@@ -274,7 +274,7 @@
         <footer>
             <nav>
                 <div class="footer-nav-logo">
-                    <img id="footer-logo" src="" alt="">
+                    <img id="footer-logo" src="./assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png" alt="">
                 </div>
                 <div class="footer-nav-contacts">
                     <ul id="footer-nav-contacts-ul">
