--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -43,8 +43,8 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-tournament-before" href="#" hx-get="tournament-before.html" hx-select="main" hx-target="main">
-                    <span>Tournament Before</span>
+                <a class="header-nav-button" id="header-nav-news" href="#" hx-get="news.html" hx-select=".main" hx-target="main">
+                    <span>News</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
                         <rect x="4%" y="-44" width="4.5%" height="44" />
@@ -73,8 +73,8 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-tournament-after" href="#" hx-get="tournament-after.html" hx-select="main" hx-target="main">
-                    <span>Tournament After</span>
+                <a class="header-nav-button" id="header-nav-tournament" href="#" hx-get="tournament.html" hx-select=".main" hx-target="main">
+                    <span>Tournament</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
                         <rect x="4%" y="-44" width="4.5%" height="44" />
