deleted:    Preprocessor_Page/assets/9lbhm4k1ouy51.webp 	deleted:    Preprocessor_Page/assets/IMG_20241204_015346_304.png 	new file:   Preprocessor_Page/assets/card1.png 	new file:   Preprocessor_Page/assets/card2.png 	new file:   Preprocessor_Page/assets/card3.png 	new file:   Preprocessor_Page/assets/card4.png 	new file:   Preprocessor_Page/assets/card5.png 	new file:   Preprocessor_Page/assets/header_fon.jpg 	deleted:    Preprocessor_Page/assets/image.png 	deleted:    Preprocessor_Page/assets/image1.png 	new file:   Preprocessor_Page/assets/mods.png 	new file:   Preprocessor_Page/assets/news.jpg 	new file:   Preprocessor_Page/assets/reg_fon.png 	deleted:    Preprocessor_Page/assets/screenshot_00050.png 	modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/news.html 	modified:   Preprocessor_Page/register.css 	modified:   Preprocessor_Page/register.css.map 	modified:   Preprocessor_Page/register.scss 	modified:   Preprocessor_Page/script.js 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -76,7 +76,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-tournament" href="#" hx-get="tournament.html" hx-select=".main" hx-target="main">
+                <!-- <a class="header-nav-button" id="header-nav-tournament" href="#" hx-get="tournament.html" hx-select=".main" hx-target="main">
                     <span>Tournament</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -105,7 +105,7 @@
                         <rect x="92%" y="-44" width="4.5%" height="44" />
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
-                </a>
+                </a> -->
                 <a class="header-nav-button" id="header-nav-info" href="#" hx-get="info.html" hx-select=".main" hx-target="main">
                     <span>Info</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
@@ -179,40 +179,34 @@
                 <div class="home-gallery-main">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                            <img src="./assets/card1.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card2.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card3.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                            <img src="./assets/card4.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card5.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card1.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
+                            <img src="./assets/card2.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card3.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card4.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
+                            <img src="./assets/card5.png" alt="" width="100%"> 
                         </div>
                     </div>
                 </div>
@@ -240,7 +234,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/image.png" alt="" width="100%">
+                            <img src="./assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -249,7 +243,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/image1.png" alt="" width="100%">
+                            <img src="./assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -258,7 +252,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/image.png" alt="" width="100%">
+                            <img src="./assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -267,7 +261,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/image1.png" alt="" width="100%">
+                            <img src="./assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                 </div>
