modified:   educational_practice_2/HTML/account.html

--- a/educational_practice_2/HTML/account.html
+++ b/educational_practice_2/HTML/account.html
@@ -30,6 +30,8 @@
                 <div class="order_id">Уникальный код заказа</div>
             </div>
         </div>
+
+        <a href="../index.html">Выйти из личного кабинета</a>
     </main>
     <footer>
 
