modified:   educational_practice_2/HTML/account.html 	modified:   educational_practice_2/HTML/order.html 	modified:   educational_practice_2/HTML/profile.html 	modified:   educational_practice_2/index.html

--- a/educational_practice_2/HTML/account.html
+++ b/educational_practice_2/HTML/account.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="../index.html" class="nav_buttons">Главная</a>
+            <a href="./order.html" class="nav_buttons">Новый заказ</a>
+            <a href="./profile.html" class="nav_buttons">Профиль пользователя</a>
+            <a href="./account.html" class="nav_buttons">Личный кабинет</a>
+            <a href="./register.html" class="nav_buttons">Регистрация</a>
+        </nav>
     </header>
     <main>
         <h1>Добро пожаловать в личный кабинет!</h1>
@@ -27,9 +33,12 @@
                 <div class="order_number">Номер для связи</div>
                 <div class="order_email">Эл.адрес для связи</div>
                 <div class="order_fio">Имя заказчика</div>
+                <div class="order_address">Адрес</div>
                 <div class="order_id">Уникальный код заказа</div>
             </div>
         </div>
+
+        <button id="remove_past_orders">Удалить выбранные заказы</button>
 
         <a href="../index.html">Выйти из личного кабинета</a>
     </main>
