--- a/educational_practice_2/index.html
+++ b/educational_practice_2/index.html
@@ -6,6 +6,29 @@
     <title>Главная страница</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="./index.html" class="nav_buttons">Главная</a>
+            <a href="./HTML/order.html" class="nav_buttons">Новый заказ</a>
+            <a href="./HTML/profile.html" class="nav_buttons">Профиль пользователя</a>
+            <a href="./HTML/account.html" class="nav_buttons">Личный кабинет</a>
+            <a href="./HTML/register.html" class="nav_buttons">Регистрация</a>
+        </nav>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+        <div class="footer_contacts">
+            <span>Номер телефона</span>
+            <span>Адрес компании</span>
+            <span>Электронная почта 1</span>
+            <span>Электронная почта 2</span>
+        </div>
+        <div class="footer_useful_links">
+            <span>Политика конфиденциальности</span>
+            <span>Правила оказания услуг</span>
+        </div>
+    </footer>
 </body>
 </html>
