modified:   educational_practice_2/HTML/account.html 	modified:   educational_practice_2/HTML/order.html

--- a/educational_practice_2/HTML/account.html
+++ b/educational_practice_2/HTML/account.html
@@ -34,6 +34,7 @@
                 <div class="order_email">Эл.адрес для связи</div>
                 <div class="order_fio">Имя заказчика</div>
                 <div class="order_address">Адрес</div>
+                <div class="order_mail">Почтовый индекс</div>
                 <div class="order_id">Уникальный код заказа</div>
             </div>
         </div>
