--- a/educational_practice_2/HTML/order.html
+++ b/educational_practice_2/HTML/order.html
@@ -16,7 +16,50 @@
         </nav>
     </header>
     <main>
+        <h1>Мы ждём ваш заказ!</h1>
 
+        <div id="order_type_main">
+            <div class="order_type">
+                <span>Тип 1</span>
+                <input type="checkbox">
+            </div>            
+            <div class="order_type">
+                <span>Тип 2</span>
+                <input type="checkbox">
+            </div>            
+            <div class="order_type">
+                <span>Тип 3</span>
+                <input type="checkbox">
+            </div>            
+            <div class="order_type">
+                <span>Тип 4</span>
+                <input type="checkbox">
+            </div>            
+            <div class="order_type">
+                <span>Тип 5</span>
+                <input type="checkbox">
+            </div>            
+            <div class="order_type">
+                <span>Тип 6</span>
+                <input type="checkbox">
+            </div>                     
+        </div>
+
+        <div id="order_info_main">
+            <input type="text" placeholder="ФИО">
+            <input type="text" placeholder="Адрес">
+            <input type="text" placeholder="Почтовый индекс">
+            <input type="tel" placeholder="Номер телефона">
+            <input type="email" placeholder="Эл.адрес">
+            <input type="text" placeholder="Дата">
+            <input type="text" placeholder="Время">
+        </div>
+
+        <div id="order_buttons">
+            <button>Создать заказ</button>
+            <button>Очистить форму</button>
+            <a href="../index.html">Отменить создание заказа - Вернуться на главную</a>
+        </div>
     </main>
     <footer>
         <div class="footer_contacts">
