--- a/educational_practice_2/index.html
+++ b/educational_practice_2/index.html
@@ -16,7 +16,41 @@
         </nav>
     </header>
     <main>
+        <h1>Добро пожаловать на сайт!</h1>
 
+        <div id="main_company_info">
+            <div id="company_info">
+                <p>Тут должен быть какой-то текст</p>
+
+                <p>И тут должен быть какой-то текст</p>
+            </div>
+            <div id="company_gallery">
+                <div class="company_img">
+                    Фото 1
+                </div>
+                <div class="company_img">
+                    Фото 2
+                </div>
+                <div class="company_img">
+                    Фото 3
+                </div>
+                <div class="company_img">
+                    Фото 4
+                </div>
+                <div class="company_img">
+                    Фото 5
+                </div>
+                <div class="company_img">
+                    Фото 6
+                </div>
+                <div class="company_img">
+                    Фото 7
+                </div>
+                <div class="company_img">
+                    Фото 8
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer_contacts">
