modified:   educational_practice_2/HTML/profile.html

--- a/educational_practice_2/HTML/profile.html
+++ b/educational_practice_2/HTML/profile.html
@@ -16,7 +16,22 @@
         </nav>
     </header>
     <main>
+        <div id="profile_photo">
+            Фото
+        </div>
 
+        <div id="profile_personal_info">
+            <div id="profile_personal_hidden">
+                <span>Логин</span>
+                <span>Пароль</span>
+            </div>
+
+            <span>ФИО</span>
+            <span>Эл.адрес</span>
+            <span>Номер телефона</span>
+            <span>Адрес</span>
+            <span>Почтовый индекс</span>
+        </div>
     </main>
     <footer>
         <div class="footer_contacts">
