--- a/educational_practice_2/index.html
+++ b/educational_practice_2/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <title>Главная страница</title>
 </head>
 <body>
